# selenium-click

./: .env.template  Makefile  README.md  pyproject.toml  run.bat
selenium_click/: enums.py  main.py
selenium_click/core/: config.py
selenium_click/utils/: logger.py
selenium_click/work/: click_auto.py  one_click.py
